# mandelbrot

./: .gitignore  README.md  logger.py  main.py  mandelbrot-codex.py  mandelbrot-numba.py  mandelbrot-numpy.py  mandelbrot-vanilla.py  mandelbrot.py  package-lock.json  requirements.txt
mandelbrot_rust/: Cargo.toml
src/: Mandelbrot-Numpy.ipynb  config.py  logger.py  mandelbrot-codex.py  mandelbrot-metal-zoom-metal.py  mandelbrot-metal-zoom.py  mandelbrot-metal.py  mandelbrot-numba-parallel.py  mandelbrot-numba.py  mandelbrot-numpy.py  mandelbrot-parallel.py  mandelbrot-rust.py  mandelbrot-torch.py  mandelbrot-vanilla.py
src/infrastructure/: config.py  logger.py
src/mandelbrot_rust/src/: lib.rs
tests/: test_all_implementations.py
